# Projection_v2

./: .gitignore
notebooks/: Projection_done.ipynb  RR_v2.ipynb  RR_v4_Unsecured-Copy1.ipynb  v10.ipynb
risk_markov_projection/: GUIDE.md  GUIDE_VI.md  PROGRESS.md  README.md  config.py  pyproject.toml
risk_markov_projection/notebooks/: interactive_projection.ipynb
risk_markov_projection/src/data/: data_loader.py  schema.py
risk_markov_projection/src/models/markov/: calibration.py  projector.py  transition.py
risk_markov_projection/src/pipelines/: run_projection.py
risk_markov_projection/src/utils/: cohort_report.py  export_excel.py  lifecycle_report.py  logger.py  metrics.py
risk_markov_projection/tests/: conftest.py  test_calibration.py  test_distribution_ead0.py  test_fallback.py  test_indicators.py  test_integration_pipeline.py  test_projector_ead.py  test_transition.py  test_validators.py
sql/: uns2.sql
src/: config.py  data_loader.py
src/rollrate/: Untitled.ipynb  calibration.py  calibration_kmob.py  forecast.py  lgd_pipeline.py  lifecycle.py  transition.py
